# AIBRAIN_ROBOT_LITTLE_S_v1

./: CMakeLists.txt
ros/melodic/: auto_build.sh  auto_run.sh
ros/melodic/devel/: .catkin  .rosinstall  _setup_util.py  local_setup.sh  setup.sh
ros/melodic/devel/lib/motor/: motor_user
ros/melodic/devel/lib/pkgconfig/: motor.pc
ros/melodic/devel/share/motor/cmake/: motorConfig.cmake
ros/melodic/src/app/: app_module_init.cpp  app_motor_test.cpp
ros/melodic/src/app/include/: app_module_init.h  app_motor_test.h
ros/melodic/src/common/: log.cpp  sleep.cpp
ros/melodic/src/core/: core_module_init.cpp  resource_core.cpp  uart_core.cpp
ros/melodic/src/core/include/: common_core.h  core_module_init.h  obj_core.h  resource_core.h  uart_core.h
ros/melodic/src/driver/: driver_module_init.cpp
ros/melodic/src/driver/include/: driver_module_init.h
ros/melodic/src/driver/uart/: uart_motor_tx2_driver.cpp  uart_motor_tx2_driver.h
ros/melodic/src/include/: common.h  log.h
ros/melodic/src/main/: CMakeLists.txt  package.xml
ros/melodic/src/main/src/: main.cpp
ros/melodic/src/motor/: CMakeLists.txt  package.xml
ros/melodic/src/motor/msg/: Message_motor.msg
ros/melodic/src/motor/src/: motor_contrler.cpp  motor_uart_driver.cpp  motor_user.cpp
